# cardmon

./: .mcp.json  CLAUDE.md  LICENSE  README.md  claude.md  godot_mcp_config.json  icon.svg.import  project.godot  readme.svg.import  test_mcp.py
.claude/: architecture.md  conventions.md  settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_index.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
addons/godot-mcp-enhanced/: README.md  debugger_integration.gd.uid  file_operations.gd  file_operations.gd.uid  http_server.gd  http_server.gd.uid  mcp_server.py  plugin.gd  plugin.gd.uid  runtime_operations.gd.uid  scene_operations.gd  scene_operations.gd.uid  screenshot_manager.gd.uid  script_operations.gd.uid
addons/godot_mcp_enhanced/: debugger_integration.gd  debugger_integration.gd.uid  file_operations.gd.uid  http_server.gd  http_server.gd.uid  plugin.cfg  plugin.gd.uid  runtime_operations.gd  runtime_operations.gd.uid  scene_operations.gd.uid  screenshot_manager.gd  screenshot_manager.gd.uid  script_operations.gd  script_operations.gd.uid
addons/godot_mcp_enhanced/python/: mcp_server.py  pyproject.toml
battle/: BattleManager.gd
docs/: draft.md  gemini_design.md  project_intro.md
docs/ai/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md
docs/mistake/: mistake_notebook.md
scenes/map/: map_0_0.tscn
scenes/test/: hd2d_test.tscn  test_sprite.gd  test_sprite_controller.gd  test_sprite_controller.gd.uid
skills/tres/: thunderShock.tres
src/utils/: physics_util.gd  (+1 more)
units/: UnitAI.gd
(+33 files in other folders)
