[project]
name = "godot-mcp-enhanced"
version = "1.0.0"
description = "Enhanced Model Context Protocol server for Godot Engine with advanced features for Windsurf AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server = "mcp_server:main_entry"  # Changed from :main to :main_entry

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
